My seventh commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>This is a Design Version V8</h1>
-    <p>Welcome to Terraform Tutorials for conni Welcome to GitHub/</p>
+    <p>Welcome to Terraform Tutorials for conni Welcome to GitHub
+        Hello how are you?/</p>
     <p>Welcome to git hub for conni ,Are you enjoying git. I am excited.!!</p>
 </body>
 
